[package]
name = "trackerino"
version = "0.1.0"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simplelog = "0.8.0"
rusqlite = "0.23.1"
warp = "0.2.3"
chrono = { version = "0.4.11", features = [ "serde" ] }
serde = { version = "1.0.111", features = [ "derive" ] }
tokio = { version = "0.2.21", features = [ "full" ] }
