[package]
name = "trackerino"
version = "0.1.0"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simplelog = "0.8.0"
rusqlite = { version = "0.23.1", features = ["chrono", "bundled"] }
r2d2_sqlite = "0.16.0"
r2d2 = "0.8.8"
warp = "0.2.3"
maxminddb = "0.14.0"
dotenv = "0.15.0"
woothee = "0.11.0"
chrono = { version = "0.4.11", features = ["serde"] }
serde = { version = "1.0.111", features = ["derive"] }
tokio = { version = "0.2.21", features = ["full"] }
